<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    android:orientation="vertical"
    tools:context="tech.town.app.com.apptowntech.ui.FeedbackActivity">

    <include layout="@layout/tool_bar"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center"
                android:textSize="17dp"
                android:text="@string/help_text"
                android:textColor="@color/red"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/gray"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:gravity="center"
                    android:text="@string/easy_of_read"
                    android:textColor="@color/gray"
                    android:textSize="17dp"
                    android:textStyle="bold" />


                <RadioGroup
                    android:id="@+id/radio_group_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"></RadioGroup>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/gray"></View>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:gravity="center"
                    android:text="@string/easy_in_doing"
                    android:textColor="@color/gray"
                    android:textSize="17dp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/radio_group_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"></RadioGroup>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/gray"></View>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:gravity="center"
                    android:text="@string/technical_issue"
                    android:textColor="@color/gray"
                    android:textSize="17dp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/radio_group_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"></RadioGroup>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/gray"></View>


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="500"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:textSize="15dp"
                    android:hint="@string/news_explain"
                    android:maxLines="10"
                    android:minHeight="100dp"
                    android:layout_margin="10dp"
                    android:id="@+id/editText_report_comment"
                    />

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:id="@+id/report_submit"
                    android:background="@color/red"
                    android:text="@string/save"
                    android:textColor="@color/white" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
